# MicroStarCraft

./: CMakeLists.txt
client/: CMakeLists.txt
client/cpp/: CMakeLists.txt  main.cpp  strategy.cpp  strategy.h
client/cpp_server_starter/: CMakeLists.txt  main.cpp
client/human/: CMakeLists.txt  human_main.cpp
client/human/client/: rpc_client.cpp  rpc_client.h
client/human/ui/: map_mesh.h  map_model.cpp  map_model.h  mesh.cpp  mesh.h  model.cpp  model.h  rts_human.cpp  rts_human.h  rts_human.ui  rts_map.cpp  rts_map.h  text_mesh.cpp  vertex.h
client/python/: game.py  main.py  run_code_gen.py  strategy.py
client/python_training/: ctype_test.py  game_types.py  train.py  vec_env.py
client/rust/: Cargo.toml  build.rs
client/rust/src/: main.rs  strategy.rs
deploy/resource/buildings/protoss/: crystal.mtl  gateway.mtl  nexus.igs  nexus.mtl
deploy/resource/buildings/zerg/: zerg_gas.mtl  zerg_hive.mtl  zerg_spawn.mtl  zerg_tower.mtl  zerg_ult.mtl
deploy/resource/race model/Protoss/immortal/: immortal.mtl  immortal1.mtl  immortal_specular.dds  不朽者.max
deploy/resource/race model/Protoss/probe/: lightcone2_orange.dds  lightcone5.dds  probe.mtl  probe_specular.dds  农民.max
deploy/resource/race model/Protoss/stalker/: stalker.mtl  stalker_specular.dds  龙骑士.max
deploy/resource/race model/Protoss/zealot/: Zealot.mtl  狂热者.max
deploy/resource/race model/Zerg/drone/: drone.mtl  农民.max
deploy/resource/race model/Zerg/hydralisk/: hydralisk_export.mtl  刺蛇.max
deploy/resource/race model/Zerg/ultralisk/: ultralisk_diffuse.dds  ultralisk_export.mtl  ultralisk_normal.dds  ultralisk_specular.dds  猛犸.max
deploy/resource/race model/Zerg/zergline/: zergline.max  zergline.mtl
deploy/shaders/: model.vs
game_types/: game_types.h
observer/: CMakeLists.txt  client_main.cpp
observer/client/: rpc_client.cpp  rpc_client.h
observer/ui/: color.fs  color.vs  coord_sys.vs  font.fs  font.vs  geometry_engine.cpp  human_ai.cpp  human_ai.h  line.cpp  line.h  map_mesh.cpp  map_mesh.h  map_model.cpp  map_model.h  mesh.cpp  mesh.h  model.cpp  model.fs  model.h  model.vs  model_engine.cpp  rts_map.cpp  rts_map.h  rts_observer.cpp  rts_observer.h  rts_observer.ui  text_mesh.cpp  text_mesh.h  texture.h  vertex.h
protos/: message.proto
server/: CMakeLists.txt  main.cpp
server/engine/: CMakeLists.txt  client_interface.cpp  client_interface.h  game_engine.cpp  game_engine.h  game_types.h  state_to_observation.cpp  state_to_observation.h
server/service/: rts_service_impl.cpp  rts_service_impl.h
